Fix infobar & pageMenu z-index

--- a/src/components/InfoBar/style.scss
+++ b/src/components/InfoBar/style.scss
@@ -6,6 +6,7 @@
   background-color: black;
   position: fixed;
   top: 0;
+  z-index: 15;
 
   .infobar {
     width: $app-width;
