--- a/src/components/PageContainer/PageMenu/style.scss
+++ b/src/components/PageContainer/PageMenu/style.scss
@@ -4,7 +4,7 @@
   width: 950px;
   height: 32px;
   background-color: rgba($forest3, 0.75);
-  z-index: -1;
+  // z-index: -1;
 
   .bp3-navbar,
   .bp3-navbar.bp3-dark {
